--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -48,11 +48,12 @@ jobs:
           export XOVI_REPO=/tmp/xovi
           git clone https://github.com/asivery/xovi $XOVI_REPO
           bash -c ". /opt/codex/*/*/environment-setup-*; make"
-          cd output
-          cp ../rmfakecloud_ns.so ../rmfakecloud_ts.so ../rmfakecloud_ws.so xovi/extensions.d/
-          ln -s /home/root/xovi/extensions.d/rmfakecloud_ns.so services/rm-sync.service/extensions.d/rmfakecloud_ns.so
-          ln -s /home/root/xovi/extensions.d/rmfakecloud_ts.so services/rm-sync.service/extensions.d/rmfakecloud_ts.so
-          ln -s /home/root/xovi/extensions.d/rmfakecloud_ws.so services/rm-sync.service/extensions.d/rmfakecloud_ws.so
+          mv rmfakecloud_ns.so rmfakecloud_ts.so rmfakecloud_ws.so output/xovi/extensions.d/
+          cd output/xovi/services/rm-sync.service/extensions.d
+          ln -s /home/root/xovi/extensions.d/rmfakecloud_ns.so rmfakecloud_ns.so
+          ln -s /home/root/xovi/extensions.d/rmfakecloud_ts.so rmfakecloud_ts.so
+          ln -s /home/root/xovi/extensions.d/rmfakecloud_ws.so rmfakecloud_ws.so
+          cd ../../../..
           tar -czf ../xovi-rmfakecloud.tar.gz *
 
       - name: Upload build artifact
